--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>MY FIRST AI SITE</h1>
+            <h1>{{params['blog_name']}}</h1>
             <span class="subheading">A Blog Theme by Start Bootstrap</span>
           </div>
         </div>
